--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <!-- <video autoplay loop muted src="videos/galaxia.mp4"></video> -->
             <img class="fotoPerfil" src="img/gato.png" alt="foto de perfil">
             <h1>Mi primer proyecto con GitHub</h1>
+            <h1>retoque</h1>
             <nav>
                 <a class="mediaq" href="#inquietudes">INQUIETUDES</a>
                 <a class="mediaq" href="#objetivos">OBJETIVOS</a>
